--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<div id="app">
     <!--<pre>{{charts}}</pre>-->
 
-    <h3> Chiran's Charts
+    <h3 style="display:inline"> Chiran's Charts
 		</h3>
+    <div style="display:inline"><img src="https://findicons.com/files/icons/808/on_stage/128/chart_bar.png" /></div>
+    <div>
   Current route <b>{{currentRoute}}</b> 
 	<p>
 		<!-- use router-link component for navigation. -->
