--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <h3 style="display:inline"> Chiran's Charts
 		</h3>
-    <div style="display:inline"><img src="https://findicons.com/files/icons/808/on_stage/128/chart_bar.png" /></div>
+    <div style="display:inline;"><img src="https://findicons.com/files/icons/808/on_stage/128/chart_bar.png" /></div>
     <div>
   Current route <b>{{currentRoute}}</b> 
 	<p>
@@ -65,7 +65,7 @@ const router = new VueRouter({
   routes // short for `routes: routes`
 })
 		var db = firebase.initializeApp({
-        databaseURL: 'https://awesome-56c60.firebaseio.com'
+        databaseURL: 'https://bt3103-chiran.firebaseio.com'
       }).database()
       var chartsRef = db.ref('charts')
       new Vue({
